--- a/style.css
+++ b/style.css
@@ -25,17 +25,20 @@ a:visited {
     background-color: #0D0D0D;
     height: 80px;
     display: flex;
+
     align-items: center;
     padding: 0 80px 0 80px;
     font-size: 1.4rem;
+    width: 100%;
 }
 
 .navbar__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 64px;
     width: 100%;
+    height: 64px;
+
 
 }
 
@@ -56,25 +59,61 @@ a:visited {
 
 .navbar__menu {
     list-style: none;
-    display: grid;
-    grid-template-columns: 1fr repeat(6, auto) 1fr;
-    column-gap: 5px;
+    display: flex;
     justify-items: center;
 
 }
 
 .navbar__item {
-    margin-left: 10px;
+    padding: 0 0.2rem 0 0.2rem;
+}
+
+.navbar__item:nth-child(-n+3) {
+    padding: 0 1rem 0 1rem;
 }
 
 .navbar__item:nth-child(4) {
-margin-left: 40px;
+margin-left: 2rem;
 }
 
 .test {
-    width: 100%;
-    
+    width: 100%;  
     height: 764px;
 }
+
+.content__container {
+   display: flex;
+   flex-direction: column;
+}
+
+.About {
+    height: 100px;
+    background-color: red;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.Training {
+    height: 100px;
+    background-color: blue;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.Diet {
+    height: 100px;
+    background-color: green;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.imgt {
+    width: 150px;
+    height: 150px;
+}
+
 
 
