--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body {
    color: #BCBABF;
+   background-color: #0D0D0D;
 }
 
 a {
@@ -84,36 +85,63 @@ margin-left: 2rem;
 .content__container {
    display: flex;
    flex-direction: column;
+   background-color: #0D0D0D;
+   padding: 20px 80px 20px 60px;
 }
 
-.About {
-    height: 100px;
-    background-color: red;
+.About__container {
+    height: auto;
+
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding-bottom: 20px;
 }
 
-.Training {
-    height: 100px;
-    background-color: blue;
+.Training__container {
+    height: auto;
+
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding-bottom: 20px;
+ 
 }
 
-.Diet {
-    height: 100px;
-    background-color: green;
+.Training__image {
+    display: flex;
+    object-fit: contain;
+}
+
+.Training__text {
+    /* flex: 1 1 auto; */
+}
+
+.Diet__container {
+    height: auto;
+
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding-bottom: 20px;
 }
 
-.imgt {
-    width: 150px;
-    height: 150px;
+.content__img {
+    background-color:  #BCBABF;
+    width: 400px;
+    height: 480px;
+    display: flex;
+}
+
+.content__txt {
+    width: 400px;
+    font-size: larger;
 }
 
 
+.footer {
+    width: 100%;
+    height: 300px;
+    background: radial-gradient(circle at 10% 20%, rgb(69, 86, 102) 0%, rgb(34, 34, 34) 90%);
+}
 
