--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ body {
    background-color: #0D0D0D;
 }
 
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+
 a {
     text-decoration: none;
     color: #BCBABF;
